// Vitest Snapshot v1

exports[`test example vuex > should match the snapshot 1`] = `
{
  "description": "Partial mapping, object spread operator example",
  "displayName": "example",
  "events": undefined,
  "exportName": "default",
  "methods": [
    {
      "description": "Sets the order",
      "name": "onSubmit",
      "params": [
        {
          "description": "Key to order",
          "name": "key",
          "title": "param",
          "type": {
            "name": "string",
          },
        },
      ],
      "returns": {
        "description": "Test",
        "title": "returns",
        "type": {
          "name": "string",
        },
      },
      "tags": {
        "access": [
          {
            "description": "public",
            "title": "access",
          },
        ],
        "params": [
          {
            "description": "Key to order",
            "name": "key",
            "title": "param",
            "type": {
              "name": "string",
            },
          },
        ],
        "returns": [
          {
            "description": "Test",
            "title": "returns",
            "type": {
              "name": "string",
            },
          },
        ],
        "since": [
          {
            "description": "Version 1.0.1",
            "title": "since",
          },
        ],
        "version": [
          {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
    },
  ],
  "props": undefined,
  "slots": undefined,
  "tags": {},
}
`;

exports[`test example vuex should match the snapshot 1`] = `
Object {
  "description": "Partial mapping, object spread operator example",
  "displayName": "example",
  "events": undefined,
  "exportName": "default",
  "methods": Array [
    Object {
      "description": "Sets the order",
      "name": "onSubmit",
      "params": Array [
        Object {
          "description": "Key to order",
          "name": "key",
          "title": "param",
          "type": Object {
            "name": "string",
          },
        },
      ],
      "returns": Object {
        "description": "Test",
        "title": "returns",
        "type": Object {
          "name": "string",
        },
      },
      "tags": Object {
        "access": Array [
          Object {
            "description": "public",
            "title": "access",
          },
        ],
        "params": Array [
          Object {
            "description": "Key to order",
            "name": "key",
            "title": "param",
            "type": Object {
              "name": "string",
            },
          },
        ],
        "returns": Array [
          Object {
            "description": "Test",
            "title": "returns",
            "type": Object {
              "name": "string",
            },
          },
        ],
        "since": Array [
          Object {
            "description": "Version 1.0.1",
            "title": "since",
          },
        ],
        "version": Array [
          Object {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
    },
  ],
  "props": undefined,
  "slots": undefined,
  "tags": Object {},
}
`;
